# cpp-practice

./: .gitignore  CMakeLists.txt  s9_e1_main.cpp  s9_e2_main.cpp  s9_e3_main.cpp  s9_e4_2_main.cpp  s9_e4_main.cpp  task_1_main.cpp  task_2_main.cpp  task_5_main.cpp  task_6_main.cpp
assets/: canterbury.txt  digits.txt  log_duration.h
simplevector/: array_ptr.h  main.cpp  simple_vector.h  tests.h
task3/: log_duration.h  main.cpp  my_assert.h  stack_vector.h
